# clinical-data-platform

./: AUDIT_SUMMARY.md  Makefile  README.cloud.md  README.md  SECURITY_NOTES.md  pyproject.toml
analytics/dbt/: dbt_project.yml  profiles.yml
api/: auth.py  config.py  dependencies.py  main.py  telemetry.py
api/routers/: data.py  health.py
clinical-data-platform/: CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
clinical-data-platform/clinical-data-platform/: CODE_OF_CONDUCT.md  Dockerfile
clinical-data-platform/clinical-data-platform/dbt/clinical_dbt/: dbt_project.yml
clinical-data-platform/clinical-data-platform/dbt/clinical_dbt/models/marts/: subject_mart.sql
clinical-data-platform/clinical-data-platform/dbt/clinical_dbt/models/staging/: stg_subjects.sql
clinical-data-platform/clinical-data-platform/dbt/clinical_dbt/models/tests/: schema.yml
clinical-data-platform/clinical-data-platform/docs/: architecture.md  compliance.md  index.md
clinical-data-platform/clinical-data-platform/docs/adr/: ADR-000-duckdb.md  ADR-001-dbt.md  ADR-004-masking.md
clinical-data-platform/clinical-data-platform/scripts/: generate_synthetic_data.py  run_all_local.sh
clinical-data-platform/clinical-data-platform/sql/: warehouse_ddl.sql
clinical-data-platform/clinical-data-platform/src/clinical_platform/: __init__.py  config.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/analytics/: feature_eng.py  queries.py  stats_utils.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/api/: main.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/ingestion/: ingest_csv.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/ml/: registry.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/security/: phi_redaction.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/standards/: cdisc_sdtm_mapping.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/standards/adam/: build_adsl.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/standards/sdtm_schemas/: EX.json
clinical-data-platform/clinical-data-platform/src/clinical_platform/ui/: dashboard.py
clinical-data-platform/clinical-data-platform/src/clinical_platform/warehouse/: loaders.py
clinical-data-platform/clinical-data-platform/tests/: test_analytics.py  test_ingestion.py  test_security.py  test_validation.py
clinical-data-platform/configs/: logging.yaml
clinical-data-platform/dbt/: profiles.yml.example
clinical-data-platform/docs/: data_model.md  getting-started.md  index.md  ml.md
clinical-data-platform/docs/adr/: ADR-002-streamlit.md  ADR-003-mlflow.md
clinical-data-platform/scripts/: seed_minio.py
clinical-data-platform/sql/: performance_examples.sql
clinical-data-platform/src/clinical_data_platform/: __init__.py
clinical-data-platform/src/clinical_data_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clinical-data-platform/src/clinical_platform/: logging_utils.py
clinical-data-platform/src/clinical_platform/ingestion/: s3_client.py
clinical-data-platform/src/clinical_platform/ml/: train.py
clinical-data-platform/src/clinical_platform/security/: access_controls.md
clinical-data-platform/src/clinical_platform/standards/sdtm_schemas/: AE.json
clinical-data-platform/src/clinical_platform/validation/: pandera_models.py
clinical-data-platform/src/clinical_platform/warehouse/: models.py
clinical-data-platform/tests/: conftest.py
configs/: config.aws.yaml  config.local.yaml  logging.yaml
configs/great_expectations/: great_expectations.yml
configs/logging/: read_only.yaml
cp_tox_mini/: __init__.py  cli.py  diagnostics.py  dose_response.py  eval.py  features.py  fuse.py  hashing.py  io.py  model_card.md  reporting.py  train.py
dbt/: profiles.yml.example
dbt/clinical_dbt/: README.md  dbt_project.yml  packages.yml
docker/: api.Dockerfile  dbt.Dockerfile  worker.Dockerfile
docs/: architecture.md  data_card.md
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: clinical_data_validation.yml  visits_checkpoint.yml
great_expectations/expectations/: public_cdm_basic.json  visits_suite.json
histopath-mets-cnn-vit-mil/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
histopath-mets-cnn-vit-mil/configs/: data.yaml
histopath-mets-cnn-vit-mil/scripts/: build_mil_bags.py  download_camelyon16.py  prepare_camelyon16.py  tile_wsi.py
histopath-mets-cnn-vit-mil/src/histopath/: __init__.py
histopath-mets-cnn-vit-mil/src/histopath/data/: __init__.py  dataset.py  transforms.py
histopath-mets-cnn-vit-mil/src/histopath/evaluation/: __init__.py  metrics.py
histopath-mets-cnn-vit-mil/src/histopath/models/: __init__.py  backbones.py  lightning_modules.py  mil.py
histopath-mets-cnn-vit-mil/src/histopath/training/: __init__.py  callbacks.py  data_module.py  trainer.py
histopath-mets-cnn-vit-mil/src/histopath/utils/: seed.py  tiling.py  tissue_mask.py
infra/: README.md
infra/terraform/: dbt_scheduled.tf  ecr.tf  ecs.tf  grafana_prometheus.tf  iam.tf  locals.tf  main.tf  openlineage.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  variables.tf
mlops/: dvc.yaml
notebooks/: public_demo_quickstart.ipynb
observability/: docker-compose.obsv.yml  freshness_sli.json  otel-collector.yaml
oncotarget-lite/: environment.yml
ops/: runbook.md
scripts/: bootstrap_admin.py  bootstrap_cloud.sh  exercise_api_and_capture.py  generate_star_schema_diagram.py  make_demo_gif.py  public_demo_end_to_end.py  run_dbt_and_capture.py  run_demo_mlflow.py
sql/: warehouse_ddl.sql
tests/: test_api.py  test_auth_required.py  test_auth_security.py  test_cors_ratelimit.py  test_cors_security.py  test_hashing.py  test_ic50.py  test_input_validation.py  test_ml.py  test_phi_redaction.py  test_phi_redaction_security.py  test_public_cdm_smoke.py  test_readonly_middleware.py  test_standards.py  test_validation.py  test_warehouse.py
(+104 files in other folders)
